--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
     <link rel="stylesheet" href="footer.css">
 </head>
 <body>
+    <!-- Header -->
     <header>
-    <div class="header-content">
-        <img src="logo.png" alt="Logo" class="logo">
-        <button id="theme-button">Listar Temas</button>
-        <ul id="theme-list" class="hidden">
-            <li data-theme="sobre-mim">Sobre Mim</li>
-            <li data-theme="carreira">Carreira</li>
-            <li data-theme="conquistas">Conquistas</li>
-            <li data-theme="marcas">Marcas em que Acredito</li>
-            <li data-theme="inspiracoes">Inspirações</li>
-            <li data-theme="videos">Vídeos</li>
-        </ul>
-    </div>
-</header>
+        <div class="header-content">
+            <img src="logo.png" alt="Logo" class="logo">
+            <button id="theme-button">Listar Temas</button>
+            <ul id="theme-list" class="hidden">
+                <li data-theme="sobre-mim">Sobre Mim</li>
+                <li data-theme="carreira">Carreira</li>
+                <li data-theme="conquistas">Conquistas</li>
+                <li data-theme="marcas">Marcas em que Acredito</li>
+                <li data-theme="inspiracoes">Inspirações</li>
+                <li data-theme="videos">Vídeos</li>
+            </ul>
+        </div>
+    </header>
+
+    <!-- Main Content -->
     <main>
         <div class="content">
             <div class="background-image"></div>
@@ -35,6 +38,7 @@
         </div>
     </main>
 
+    <!-- Footer -->
     <footer>
         <div class="footer-content">
             <p>Email: exemplo@email.com</p>
@@ -47,6 +51,7 @@
         </div>
     </footer>
 
+    <!-- JavaScript -->
     <script src="script.js"></script>
 </body>
 </html>
