--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <!-- Header -->
     <header>
         <div class="header-content">
-            <img src="logo.png" alt="Logo" class="logo">
-            <button id="theme-button">Listar Temas</button>
-            <ul id="theme-list" class="hidden">
-                <li data-theme="sobre-mim">Sobre Mim</li>
-                <li data-theme="carreira">Carreira</li>
-                <li data-theme="conquistas">Conquistas</li>
-                <li data-theme="marcas">Marcas em que Acredito</li>
-                <li data-theme="inspiracoes">Inspirações</li>
-                <li data-theme="videos">Vídeos</li>
+            <img src="logo.png" alt="Logotipo da Minha Página" class="logo">
+            <button id="theme-button" aria-haspopup="true" aria-expanded="false">Listar Temas</button>
+            <ul id="theme-list" class="hidden" role="menu">
+                <li role="menuitem" data-theme="sobre-mim">Sobre Mim</li>
+                <li role="menuitem" data-theme="carreira">Carreira</li>
+                <li role="menuitem" data-theme="conquistas">Conquistas</li>
+                <li role="menuitem" data-theme="marcas">Marcas em que Acredito</li>
+                <li role="menuitem" data-theme="inspiracoes">Inspirações</li>
+                <li role="menuitem" data-theme="videos">Vídeos</li>
             </ul>
         </div>
     </header>
@@ -31,8 +31,8 @@
                 <h1 id="theme-title">Sobre Mim</h1>
                 <p id="theme-description">Aqui vai o texto sobre mim.</p>
             </div>
-            <button id="prev-button">&lt;</button>
-            <button id="next-button">&gt;</button>
+            <button id="prev-button" aria-label="Tema Anterior">&lt;</button>
+            <button id="next-button" aria-label="Próximo Tema">&gt;</button>
         </div>
     </main>
 
@@ -41,9 +41,9 @@
         <div class="footer-content">
             <p>Email: exemplo@email.com</p>
             <p>
-                <a href="https://facebook.com">Facebook</a> |
-                <a href="https://twitter.com">Twitter</a> |
-                <a href="https://instagram.com">Instagram</a>
+                <a href="https://facebook.com" target="_blank" rel="noopener noreferrer">Facebook</a> |
+                <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">Twitter</a> |
+                <a href="https://instagram.com" target="_blank" rel="noopener noreferrer">Instagram</a>
             </p>
             <p>&copy; 2023 Todos os direitos reservados.</p>
         </div>
