--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <header>
         <div class="header-content">
-            <img src="https://esportista.github.io/arquivo/botaoMenu.png" alt="Logo" class="logo">
+            <img src="https://esportista.github.io/arquivo/imagens/botaoMenu.png" alt="Logo" class="logo">
             <button id="theme-button">Listar Temas</button>
             <ul id="theme-list" class="hidden">
                 <li data-theme="sobre-mim">Sobre Mim</li>
