--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="header-content">
             <img src="https://esportista.github.io/arquivo/imagens/botaoMenu.png" alt="Logo" class="logo">
-            <button id="theme-button">Listar Temas</button>
+            <button id="theme-button">Menu</button>
             <ul id="theme-list" class="hidden">
                 <li data-theme="sobre-mim">Sobre Mim</li>
                 <li data-theme="carreira">Carreira</li>
