--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <!-- Header -->
     <header>
         <div class="header-content">
-            <img src="https://esportista.github.io/arquivo/imagens/botaoMenu.png" alt="Logo" class="logo">
-            <button id="theme-button">Menu</button>
+            <img src="logo.png" alt="Logo" class="logo">
+            <button id="theme-button">
+                <img src="icon-list.png" alt="Ícone de lista" class="button-icon">
+                Listar Temas
+            </button>
             <ul id="theme-list" class="hidden">
                 <li data-theme="sobre-mim">Sobre Mim</li>
                 <li data-theme="carreira">Carreira</li>
