--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="header-content">
             <img src="logo.png" alt="Logo" class="logo">
             <button id="theme-button">
-                <img src="icon-list.png" alt="Ícone de lista" class="button-icon">
+                <img src="https://esportista.github.io/arquivo/imagens/botaoMenu.png" alt="Ícone de lista" class="button-icon">
                 Listar Temas
             </button>
             <ul id="theme-list" class="hidden">
