--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página pessoal com informações sobre mim, carreira, conquistas e mais.">
+    <meta name="keywords" content="sobre mim, carreira, conquistas, marcas, inspirações, vídeos">
     <title>Minha Página</title>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
