--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="sobre mim, carreira, conquistas, marcas, inspirações, vídeos">
     <title>Minha Página</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://esportista.github.io/arquivo/imagens/favicon.ico">
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
