--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
     <header>
         <div class="header-content">
             <img src="logo.png" alt="Logo" class="logo">
-            <button id="theme-button">
-                <img src="https://esportista.github.io/arquivo/imagens/botaoMenu.png" alt="Ícone de lista" class="button-icon">        
-            </button>
-            <ul id="theme-list" class="hidden">
+            <ul id="theme-list">
                 <li data-theme="sobre-mim">Sobre Mim</li>
                 <li data-theme="carreira">Carreira</li>
                 <li data-theme="conquistas">Conquistas</li>
