--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li data-theme="sobre-mim">Sobre Mim</li>
                 <li data-theme="carreira">Carreira</li>
                 <li data-theme="conquistas">Conquistas</li>
-                <li data-theme="marcas">Marcas em que Acredito</li>
+                <li data-theme="marcas">Marcas</li>
                 <li data-theme="inspiracoes">Inspirações</li>
                 <li data-theme="videos">Vídeos</li>
             </ul>
