--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Header -->
     <header>
         <div class="header-content">
-            <img src="logo.png" alt="Logo" class="logo">
+            <img src="https://esportista.github.io/arquivo/imagens/botaoMenu.jpg" alt="Logo" class="logo">
             <ul id="theme-list">
                 <li data-theme="sobre-mim">Sobre Mim</li>
                 <li data-theme="carreira">Carreira</li>
