--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <p>Email: exemplo@email.com</p>
-            <p>
+            <p>Email: exemplo@email.com |            
                 <a href="https://facebook.com">Facebook</a> |
                 <a href="https://twitter.com">Twitter</a> |
                 <a href="https://instagram.com">Instagram</a>
