--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <p>Email: exemplo@email.com |            
+            <p>
+                <a href="arth7.sk8@gmail.com">Email</a> |            
                 <a href="https://facebook.com">Facebook</a> |
                 <a href="https://twitter.com">Twitter</a> |
                 <a href="https://instagram.com">Instagram</a>
