--- a/index.html
+++ b/index.html
@@ -30,14 +30,17 @@
     <!-- Main Content -->
     <main>
         <div class="content">
-            <div class="background-image"></div>
-            <div class="text-content">
+            <!-- Coluna da imagem -->
+            <div class="image-column" id="theme-image"></div>
+            <!-- Coluna do texto -->
+            <div class="text-column">
                 <h1 id="theme-title">Sobre Mim</h1>
                 <p id="theme-description">Aqui vai o texto sobre mim.</p>
             </div>
-            <button id="prev-button">&lt;</button>
-            <button id="next-button">&gt;</button>
         </div>
+        <!-- Botões de navegação -->
+        <button id="prev-button">&lt;</button>
+        <button id="next-button">&gt;</button>
     </main>
 
     <!-- Footer -->
