--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
                 <a href="arth7.sk8@gmail.com">Email</a> |            
                 <a href="https://facebook.com">Facebook</a> |
                 <a href="https://twitter.com">Twitter</a> |
-                <a href="https://instagram.com">Instagram</a>
-            </p>
-            <p>&copy; 2023 Todos os direitos reservados.</p>
+                <a href="https://instagram.com">Instagram</a> |
+                &copy; 2023 Todos os direitos reservados.</p>
         </div>
     </footer>
 
