--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
     <footer>
         <div class="footer-content">
             <p>
-                <a href="arth7.sk8@gmail.com">Email</a> |            
-                <a href="https://facebook.com">Facebook</a> |
-                <a href="https://twitter.com">Twitter</a> |
-                <a href="https://instagram.com">Instagram</a> |
+                <a href="malito:arth7.sk8@gmail.com">EMAIL</a> | 
+                <a href="https://www.instagram.com/arthuzinho_.010?igsh=bmhycTFmMmluejls">INSTAGRAM</a> | 
+                <a href="https://www.tiktok.com/@arthuzinho_.010?_t=ZM-8tNaFHByBE5&_r=1">TIKTOK</a> | 
                 &copy; 2023 Todos os direitos reservados.</p>
         </div>
     </footer>
