--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <footer>
         <div class="footer-content">
             <p>
-                <a href="maiLto:arth7.sk8@gmail.com">EMAIL</a> | 
+                <a href="mailto:arth7.sk8@gmail.com">EMAIL</a> | 
                 <a href="https://www.instagram.com/arthuzinho_.010?igsh=bmhycTFmMmluejls">INSTAGRAM</a> | 
                 <a href="https://www.tiktok.com/@arthuzinho_.010?_t=ZM-8tNaFHByBE5&_r=1">TIKTOK</a> | 
                 &copy; 2023 Todos os direitos reservados.</p>
