--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Página pessoal com informações sobre mim, carreira, conquistas e mais.">
     <meta name="keywords" content="sobre mim, carreira, conquistas, marcas, inspirações, vídeos">
-    <title>Minha Página</title>
+    <title>Página do Arthur</title>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="https://esportista.github.io/arquivo/imagens/favicon.ico">
     <!-- CSS -->
